trunk/Archive2/dd/b34c46aff3771f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:32:5: error: ‘set’ was not declared in this scope
     set<Person, PersonSortCriterion> coll;
     ^
main.cpp:32:5: note: suggested alternative:
In file included from /usr/include/c++/4.8/set:61:0,
                 from main.cpp:8:
/usr/include/c++/4.8/bits/stl_set.h:90:11: note:   ‘std::set’
     class set
           ^
main.cpp:32:15: error: expected primary-expression before ‘,’ token
     set<Person, PersonSortCriterion> coll;
               ^
main.cpp:32:36: error: expected primary-expression before ‘>’ token
     set<Person, PersonSortCriterion> coll;
                                    ^
main.cpp:32:38: error: ‘coll’ was not declared in this scope
     set<Person, PersonSortCriterion> coll;
                                      ^
